first working version

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,7 @@
+[platformio]
+extra_configs =
+  local.ini
+
 [env:genericSTM32F105RB]
 platform = ststm32
 board = genericSTM32F105RB
@@ -17,8 +21,11 @@ build_flags =
     -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC
     -D USBCON
     -D HAL_PCD_MODULE_ENABLED
+    -D STM32F105xC
+    -D GPIO_MODULE_ENABLED
+    -D UART_MODULE_ENABLED
 
 ; == WIFI UPLOAD CONFIGURATION ==
 upload_protocol = custom
 extra_scripts = upload_script.py
-upload_url = http://192.168.6.236/update
+
